--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "amqplib": "^0.10.9",
     "better-sqlite3": "^12.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "nodemon": "^3.1.11"
   }
